   by Minion. [MG] [GM]
 * type() and hastype() claimed to work on GARBAGE objects, but actually
   returned #-1 NO SUCH MATCH. Reported by Jules. [MG]
 * A few messages were sent with incorrect nospoof data. Reported by 
   Jules. [MG]
 * Fix a harmless but annoying race condition when making a SSL connection 
   to a game in the middle of starting. [SW]

Functions:
 * isregexp() to validate regexp patterns. Suggested by Padraic. [DC]
 
Commands:
 * 'examine' and 'brief' now take an /opaque switch, which omits contents
   listings. Useful for spammy objects like the player_start room. [MG]

Version 1.8.4 patchlevel 7                                 Sep 25, 2011

Deprecation:
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]
 * @doing is now deprecated (see below).
 * The "newline_one_char" mush.cnf option is now deprecated, and will soon
   always be "Yes". If you have it set to No and have any code that assumes
   strlen(%r) == 2, you should change it now. [MG]

Major changes:
 * DOING is now a standard attribute. Your @doing can be any length, and
   doing() returns the whole string (though it will still be truncated when
   displayed on WHO), can contain ANSI and will be evaluated each time it's 
   displayed, allowing for random/rotating doings. The @doing command will
   escape its input before setting into an attribute, for backwards
   compatability, but is now deprecated; use &doing to store code. [MG]
 * All objects with the same flags or powers set share the same
   storage for those flags. Large games should see slightly reduced memory
   use. Suggested by [GM]. [SW]

Minor changes:
 * Rewrite memcheck allocation tracking to use a more efficient data
   structure. [SW]
 * Help file improvements, by Ender and others. [SW] [MG]
 * Added a new 'getting started' helpfile, that gives a brief overview of
   how to move, talk, use channels and @mail. Suggested by Wiggles. [MG]